Fixing scrollbar bug

--- a/resources/assets/sass/2-basics/_body-element.scss
+++ b/resources/assets/sass/2-basics/_body-element.scss
@@ -2,5 +2,5 @@ body {
     font-family: $font-family;
     font-size: $font-size;
 
-    padding-top: 55px;
+    padding-top: 54px;
 }
