--- a/resources/assets/sass/4-pages/_index.scss
+++ b/resources/assets/sass/4-pages/_index.scss
@@ -1,6 +1,5 @@
 .index {
     .banner {
-        @extend .row;
         background-color: color("light-green", 400) !important;
 
         padding: 30px 0;
